--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
-#wrap{
+#wrap{  
+	    
+	    background: cover;
 	    background-position: center center;
 	    background-attachment: fixed; 
-        background:url(../img/back1.jpg) ;
+        background:url(../img/back1.jpg);
         animation: fateimg 100s linear infinite;
     }
     @keyframes fateimg{
@@ -31,7 +33,6 @@
         99%{background: url(../img/back8.jpg);opacity: 0;background-position: center center;background-attachment: fixed;}
         100%{background: url(../img/back1.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
     }
-
 
 
 
