--- a/css/title.css
+++ b/css/title.css
@@ -15,7 +15,7 @@ body {
     text-align:center;
     z-index: 2;
     padding-bottom: 50px;
-    padding-top: 200px;
+    padding-top: 120px;
     margin: auto auto;
     left: 0;
     right: 0;
@@ -331,4 +331,31 @@ body {
         opacity: 0;
     }
 }
+#btn{
+	z-index: 4;
+	margin-top:630px;
+	width: 100%;
+}
+#btn .button {
+	background-color: #F08080;
+	color: white;
+	width: 100%;
+	/*border-radius: 8px;*/
+	padding: 10px 40px;
+	border: none;
+    outline: none;
+	margin: 100 auto;
+	transition: 0.5s;
+}
+ #btn .button:hover{
+	
+	background-color: coral;
+	cursor: pointer;
+	transform: scale(1.2,1.2);
+	
+	}
 
+#music{
+	margin-top: 10px;
+
+}
