--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,171 @@
-body{
-	cursor:url('../img/mouse1.cur'),url('../img/mouse1.cur'),auto;
-}
+
 #wrap{  
-	    
+	  
+	    z-index: -1;
 	    background: cover;
 	    background-position: center center;
-	    background-attachment: fixed; 
-        background:url(../img/back1.jpg);
-        animation: fateimg 100s linear infinite;
-    }
-    @keyframes fateimg{
-        0%{background: url(../img/back1.jpg);opacity: 1;background-position: center center;background-attachment: fixed; }
-        11%{background: url(../img/back1.jpg);opacity: 1;background-position: center center;background-attachment: fixed; }
-        12%{background: url(../img/back1.jpg);opacity: 0;background-position: center center;background-attachment: fixed; }
-        13%{background: url(../img/back2.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        23%{background: url(../img/back2.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        24%{background: url(../img/back2.jpg);opacity: 0;background-position: center center;background-attachment: fixed;}
-        25%{background: url(../img/back3.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        35%{background: url(../img/back3.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        36%{background: url(../img/back3.jpg);opacity: 0;background-position: center center;background-attachment: fixed;}
-        37%{background: url(../img/back4.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        47%{background: url(../img/back4.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        48%{background: url(../img/back4.jpg);opacity: 0;background-position: center center;background-attachment: fixed;}
-        49%{background: url(../img/back5.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        59%{background: url(../img/back5.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        60%{background: url(../img/back5.jpg);opacity: 0;background-position: center center;background-attachment: fixed;}
-        61%{background: url(../img/back6.jpeg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        72%{background: url(../img/back6.jpeg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        73%{background: url(../img/back6.jpeg);opacity: 0;background-position: center center;background-attachment: fixed;}
-        74%{background: url(../img/back7.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        85%{background: url(../img/back7.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        86%{background: url(../img/back7.jpg);opacity: 0;background-position: center center;background-attachment: fixed;}
-        87%{background: url(../img/back8.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        98%{background: url(../img/back8.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
-        99%{background: url(../img/back8.jpg);opacity: 0;background-position: center center;background-attachment: fixed;}
-        100%{background: url(../img/back1.jpg);opacity: 1;background-position: center center;background-attachment: fixed;}
+	    background-attachment: fixed;      
     }
 
+body{
+	cursor:url('../img/mouse1.cur'),url('../img/mouse1.cur'),auto;
+    height: 100%;
+    overflow-x: hidden;
+}
+.banner {
+	
+ 	position: fixed;
+    list-style: none;
+    z-index: -4;
+}
+.banner li span {
+    width: 100%;
+    height: 100%;
+    position:fixed;
+    top: 0px;
+    left: 0px;
+    color: transparent;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: none;
+    opacity: 0;
+    z-index: -5;
+    -webkit-backface-visibility: hidden;
+    backface-visibility:hidden;
+    -webkit-animation: imageAnimation 48s linear infinite 0s;
+    -moz-animation: imageAnimation 48s linear infinite 0s;
+    animation: imageAnimation 48s linear infinite 0s;
+}
+@media only screen and (min-width: 768px) {
+    .banner li h3 {
+        bottom: 30px;
+        font-size: 8.125em;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .banner li h3 {
+        font-size: 10.9375em;
+    }
+}
+.banner li:nth-child(1) span {
+    background-image:url(../img/back1.jpg);
+}
+.banner li:nth-child(2) span {
+    background-image:url(../img/back2.jpg);
+    -webkit-animation-delay: 6s;
+    -moz-animation-delay: 6s;
+    animation-delay: 6s;
+}
+.banner li:nth-child(3) span {
+    background-image:url(../img/back3.jpg);
+    -webkit-animation-delay: 12s;
+    -moz-animation-delay: 12s;
+    animation-delay: 12s;
+}
+.banner li:nth-child(4) span {
+    background-image:url(../img/back4.jpg);
+    -webkit-animation-delay: 18s;
+    -moz-animation-delay: 18s;
+    animation-delay: 18s;
+}
+.banner li:nth-child(5) span {
+    background-image:url(../img/back5.jpg);
+    -webkit-animation-delay: 24s;
+    -moz-animation-delay: 24s;
+    animation-delay: 24s;
+}
+.banner li:nth-child(6) span {
+    background-image:url(../img/back6.jpeg);
+    -webkit-animation-delay: 30s;
+    -moz-animation-delay: 30s;
+    animation-delay: 30s;
+}
+.banner li:nth-child(7) span {
+    background-image:url(../img/back7.jpg);
+    -webkit-animation-delay: 36s;
+    -moz-animation-delay: 36s;
+    animation-delay: 36s;
+}
+.banner li:nth-child(8) span {
+    background-image:url(../img/back8.jpg);
+    -webkit-animation-delay: 42s;
+    -moz-animation-delay: 42s;
+    animation-delay: 42s;
+}
+
+@-webkit-keyframes imageAnimation {
+    0% {
+    	transform: scale(1,1);
+        opacity: 0;
+        -webkit-animation-timing-function: ease-in;
+    }
+    6.25% {
+    	transform: scale(1.2,1.2);
+        opacity: 1;
+        -webkit-animation-timing-function: ease-out;
+    }
+    12.5% {
+    	transform: scale(1.4,1.4);
+        opacity: 1;
+    }
+    18.75% {
+    	transform: scale(1.5,1.5);
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@-moz-keyframes imageAnimation {
+    0% {
+    	transform: scale(1,1);
+        opacity: 0;
+        -moz-animation-timing-function: ease-in;
+    }
+    6.25% {
+    	transform: scale(1.2,1.2);
+        opacity: 1;
+        -moz-animation-timing-function: ease-out;
+    }
+    12.5% {
+    	transform: scale(1.4,1.4);
+        opacity: 1;
+    }
+    18.75% {
+    	transform: scale(1.5,1.5);
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@keyframes imageAnimation {
+    0% {
+    	transform: scale(1,1);
+        opacity: 0;
+        -webkit-animation-timing-function: ease-in;
+        -moz-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+    6.25% {
+    	transform: scale(1.2,1.2);
+        opacity: 1;
+        -webkit-animation-timing-function: ease-out;
+        -moz-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+    12.5% {
+    	transform: scale(1.4,1.4);
+        opacity: 1;
+    }
+    18.75%{
+    	transform: scale(1.5,1.5);
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
 
 
 
@@ -74,7 +203,7 @@ a{
 	color: white;
 	letter-spacing: 2px;
 }
-.banner{
+.banner1{
 	height: 600px;
 }
 .clear_fix:after{
@@ -83,7 +212,7 @@ a{
     clear: both;	
 }
 
-.banner .inner{
+.banner1 .inner{
 	color: #F08080;
 	max-width: 300px;
     height: 240px;
@@ -92,7 +221,7 @@ a{
     top: 160px;
     text-align: center;	
 }
-.banner .inner .line{
+.banner1 .inner .line{
 	width: 300px;
 	height: 2px;
 	background-color: white;
@@ -100,16 +229,16 @@ a{
 	margin-bottom: 10px;
 	
 }
-.banner .inner h1{
+.banner1 .inner h1{
 	font-size: 30px;
 	padding-bottom: 10px;
 }
-.banner .inner p{
+.banner1 .inner p{
 	font-size: 20px;
 	line-height: 50px;
 	letter-spacing: 1px;
 }
-.banner .inner button{
+.banner1 .inner button{
 	background-color: #F08080;
 	color: white;
 	border-radius: 8px;
@@ -119,14 +248,14 @@ a{
 	margin: 0 auto;
 	transition: 0.5s;
 }
-.banner .inner button:hover{
+.banner1 .inner button:hover{
 	
 	background-color: coral;
 	cursor: pointer;
 	transform: scale(1.2,1.2);
 	
 	}
-.banner .inner .more{
+.banner1 .inner .more{
 	padding-top: 160px;
 	color: white;
 }
@@ -184,7 +313,6 @@ a{
 .section2{
 	opacity: 0.9;
 	background-color: slategray;
-	height:379px;
 	color: white;
 	position: relative;
 	width:100%;
@@ -195,15 +323,16 @@ a{
 	
 }
 .section2 .sec .secimg img{
-	width:100%;
-	height: 101%;
+	width:120%;
+	height: 100%;
+	margin-bottom: -0.2em;
 }
 .sec>div{
 	float: left;
 	
 }
 .section2 .sec .sectext{
-	margin-left: 30px;
+	margin-left:10%;
 	margin-top: 30px;
 }
 .section2 .sec .sectext h2{
@@ -229,18 +358,20 @@ a{
 }
 .section3 .third .thirdimg{
 	width: 40%;
+	margin: 0px;
 	
 }
 .section3 .third .thirdimg img{
-	width:100%;
+	width:130%;
 	height: 100%;
+	margin-bottom: -0.2em;
 }
 .third>div{
 	float:right;
 	
 }
 .section3 .third .thirdtext{
-	margin-right: 400px;
+	margin-right:20%;
 	margin-top: 30px;
 }
 .section3 .third .thirdtext h2{
@@ -252,4 +383,100 @@ a{
 	font-size: 20px;
 	letter-spacing: 2px;
 	margin-bottom: 5px;
+}
+
+.section4
+{
+	position: relative;
+	background:rgba(2,2,3,0.9);
+	opacity: 0.5;
+	color: white;
+	padding-bottom: 10em;
+}
+.section4 .treewrap{
+	max-width: 50%;
+	margin: 0 auto;
+	padding-top: 50px;
+}
+.section4 .treewrap .title
+{
+	text-align: center;
+}
+.section4 .treewrap .title h2{
+	font: "微软雅黑";
+	font-size: 3em;
+	margin-bottom:0.4em;
+}
+.section4 .treewrap .title .line
+{
+	margin: 0 auto;
+	width:100%;
+	height: 3px;
+	background: #A9A9A9;
+	opacity: 0.9;
+}
+.section4 .treewrap .title p{
+	font: "微软雅黑";
+	font-size: 1em;
+	margin-top:0.4em;
+}
+
+.card
+{
+	margin: 0 auto;
+	/*max-width: 70%;*/
+	padding-top:7%;
+}
+.card .cardcore{
+ border-radius: 1em;
+ width: 40%;
+ min-height: 10em;
+ padding-left:10%;
+ float: left;
+ padding-bottom: 1%;
+ padding-top: 1%;
+}
+.card .cardcore .line1{
+	height: 0.1em;
+	width:80%;
+	background:darksalmon;
+}
+.card .cardcore a
+{
+	font-size: 1.5em;
+	text-align: center;
+	color:rgba(255, 0, 0, 0.89);
+}
+.card .cardcore p{
+	color:black;
+	text-align: left;
+	font-weight: 501;
+}
+.cardcore:nth-child(1){
+	background-color:rgba(140, 113, 87, 0.9);
+}
+.cardcore:nth-child(2){
+	background-color:rgba(170, 92, 51, 0.9);
+}
+.cardcore:nth-child(3){
+	background-color:rgba(26, 6, 75, 0.9);
+}
+.cardcore:nth-child(4){
+	background-color:rgba(126, 9, 55, 0.9);
+}
+
+#footer{
+	position: relative;
+	height: 9em;
+	background-color: #333;
+	text-align: center;
+	color: white;
+	padding-top: 5.2em;
+	opacity: 0.95;
+}
+#footer p{
+	font-size: 1em;
+	margin-bottom:2em;
+	letter-spacing: 0.5em;
+
 }
